# civitasos

./: .gitignore  Cargo.toml  FRONTEND_INTEGRATION.md  README.md  deploy_verification.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  README.md  USAGE_GUIDE.md
src/: advanced_consensus.rs  atomic.rs  civilization.rs  consensus.rs  cross_chain.rs  economics.rs  execution.rs  governance.rs  governance_policy.rs  lib.rs  main.rs  state.rs
src/monitoring/: health.rs  metrics.rs  mod.rs  security.rs
src/network/: discovery.rs  message.rs  mod.rs  node.rs
tests/: basic_deploy_test.rs  basic_execution_test.rs  governance_advanced_test.rs  integration_test.rs
