[package]
name = "civitasos"
description = "A decentralized AI agent operating system"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"
bytes = "1.0"
futures = "0.3"
pin-project = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
base64 = "0.21"
sha2 = "0.10"
ring = "0.17"
ed25519-dalek = "2.0"
wasmtime = "14.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
socket2 = "0.5"
getrandom = "0.2"
num-bigint = "0.4"
num-traits = "0.2"
parking_lot = "0.12"
dashmap = "5.4"
arc-swap = "1.6"
indexmap = { version = "2.0", features = ["serde"] }
smallvec = "1.0"
once_cell = "1.19"
lazy_static = "1.4"
regex = "1.0"
url = "2.0"
ipnet = "2.7"
cidr = "0.2"
multiaddr = "0.18"
libp2p = { version = "0.53", features = ["tcp", "dns", "identify", "ping", "gossipsub", "kad", "noise", "yamux"] }
libp2p-core = "0.42"
libp2p-swarm = "0.47"
libp2p-identity = "0.2.0"

[dev-dependencies]
tokio-test = "0.4"
assert_matches = "1.5"

[features]
default = ["full"]
full = ["network", "consensus", "execution", "state", "atomic", "civilization"]
network = []
consensus = []
execution = []
state = []
atomic = []
civilization = []

[[bin]]
name = "civitasos"
path = "src/main.rs"

[lib]
name = "civitasos"
path = "src/lib.rs"